index.html, mobile-first.css, style.css

--- a/index.html
+++ b/index.html
@@ -14,9 +14,13 @@
     <h1> I'm Elizabeth</h1>
 <div class="container">
 <img src="red.jpg.jpg" class="red">
-</div>
+</div class>
+<div class="aboutme">
     <p>  I'm a software developer! i can help you build a product,<br> feature or website look through some of my work ! if you like you see and have a project <br> you need coded, dont hesistate to contact me</p>
-    <span> Let's connect</span>
+</div>
+
+<span> Let's connect</span>
+
 <div class="socialmediaicons">
 <ul>
     <li><a href="#" class="fa fa-facebook"></a></li>
