index.html, mobile-first.css

--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
 
 <div class="socialmediaicons">
 <ul>
-    <li><a href="#" class="fa fa-facebook"></a></li>
+    <li><a href="https://web.facebook.com/elizabeth.alali" target="_blank" class="fa fa-facebook"></a></li>
     <li><a href="#" class="fa fa-twitter"></a></li>
     <li><a href="#" class="fa fa-linkedin"></a></li>
     <li><a href="#" class="fa fa-google"></a></li>
