index.html, mobile-first.css, bg1.jpg, bg3.jpg

--- a/index.html
+++ b/index.html
@@ -11,6 +11,7 @@
     <title>My PortFolio</title>
 </head>
 <body>
+    <section class="firstsection">
     <h1> I'm Elizabeth</h1>
 <div class="container">
 <img src="red.jpg.jpg" class="red">
@@ -31,6 +32,15 @@
 </div>
 
 <button class="resumebutton">Get my resume</button>
+</section>
+
+<section class="secondsection">
+    <img src="sunrise.avif" class="sunrise">
+    <H1> Tonic</H1>
+    <H3>CONCEPT Work and Play 567</H3>
+    
+</section>
+
     
 </body>
 </html>
