deleted:    bg1.jpg         new file:   bg2.jpg         modified:   index.html         modified:   mobile-first.css         modified:   style.css

--- a/index.html
+++ b/index.html
@@ -38,9 +38,36 @@
     <img src="sunrise.avif" class="sunrise">
     <H1> Tonic</H1>
     <H3>CONCEPT Work and Play 567</H3>
+    <p>A daily selection of privately paracetamol and micmulmn or design</p>
+    <ul>
+        <li><button class="html">HTML</button></li>
+        <li><button class="css">CSS</button></li>
+        <li><button class="JavaScript">JavaScript</button></li>
+    </ul>
+<br><button class="seemyproject">See Project</button>
+</section>
+
+<section class="sectionthree">
+    <img src="bg3.jpg" class="bluecurve">
+ <h1>Multi-Post <br> Stories</h1>
+ <br>CONCEPT ** mommutthhv **500%
+ <p>A quick selection of privately paratmol Lorem ipsum, dolor sit amet consectetur adipisicing elit. Minima rerum praesentium reiciendis sit ut nesciunt labore saepe ex amet, veniam quam architecto pariatur, nam commodi nihil dolorum eius, quibusdam unde!</p>
+ <ul>
+    <li><button class="html">HTML</button></li>
+        <li><button class="css">CSS</button></li>
+        <li><button class="Java Script">JavaScrip</button></li>
+ </ul>
+ <br><button class="seemyproject">See Project</button>
+</section>
+
+
+<section class="sectionthree">
+
+        <img src="bg2.jpg" class="greencurve"> 
+    <br><h1>Tonic</h1>
     
 </section>
 
-    
+
 </body>
 </html>
