index.html, style.css

--- a/index.html
+++ b/index.html
@@ -29,22 +29,24 @@
     <li><a href="#" class="fa fa-linkedin"></a></li>
     <li><a href="#" class="fa fa-google"></a></li>
 </ul>
-</div>
 
 <button class="resumebutton">Get my resume</button>
+</div>
 </section>
 
-<section class="secondsection">
-    <img src="sunrise.avif" class="sunrise">
+<section class="secondsection" id="secondsection">
+    <div class="sunrise">
+    <img src="sunrise.avif">
     <H1> Tonic</H1>
     <H3>CONCEPT Work and Play 567</H3>
-    <p>A daily selection of privately paracetamol and micmulmn or design</p>
+    <p class="aboutsunrise">A daily selection of privately paracetamol and micmulmn or design</p>
     <ul>
         <li><button class="html">HTML</button></li>
         <li><button class="css">CSS</button></li>
         <li><button class="JavaScript">JavaScript</button></li>
     </ul>
 <br><button class="seemyproject">See Project</button>
+</div>
 </section>
 
 <section class="sectionthree">
@@ -61,12 +63,11 @@
 </section>
 
 
-<section class="sectionthree">
-
-        <img src="bg2.jpg" class="greencurve"> 
+<section class="sectionthree" id="sectionthree">
+    <div class="greencurve">
+        <img src="bg2.jpg"> 
+    </div>
     <br><h1>Tonic</h1>
 </section>
-
-
 </body>
 </html>
