--- a/index.html
+++ b/index.html
@@ -69,5 +69,14 @@
     </div>
     <br><h1>Tonic</h1>
 </section>
+<form >
+    <label for="fname">First Name:</label>
+    <input type="text" id="firstname"><br>
+    <label for="lname">Last Name:</label>
+    <input type="text" id="Lastname"><br>
+    <label for="email">Email Address:</label>
+    <input type="email" id="Emailaddress"><br>
+    <button class="submit">Submit</button>
+</form>
 </body>
 </html>
