index.html, mobile-first.css, style.css

--- a/index.html
+++ b/index.html
@@ -3,7 +3,6 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0, shrink-to-fit=yes">
-    <link rel="stylesheet" href="mobile-first.css">
     <link rel="stylesheet" href="style.css">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
 
@@ -11,14 +10,15 @@
     <title>My PortFolio</title>
 </head>
 <body>
+    <header>
     <nav class="navbar" id="navbar">  
-        <ul>
+        <ul class="nav">
             <li><a href="#firstsection">About Me</a></li>
             <li><a href="#secondsection">Concept</a></li>
             <li><a href="#form">Contact me</a></li>
         </ul>
     </nav>
-    
+</header>
 
 <section class="firstsection" id="firstsection">
 <img src="red.jpg.jpg" class="red">
